--- a/hd/src/main/AndroidManifest.xml
+++ b/hd/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.hd.app" >
+    package="com.example.hd.app">
 
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
@@ -46,20 +46,22 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
-            android:process=":remote" >
-        </service>
+            android:process=":remote"></service>
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
+
+
             android:value="Bw0G44W8KhTaKhoS8V7MKkIQ" />
+        // android:value="GrpcE4nIB0lDwGz2x2y5IhoX" />
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -68,24 +70,22 @@
         </activity>
         <activity
             android:name=".SerchActivity"
-            android:label="@string/title_activity_serch" >
-        </activity>
+            android:label="@string/title_activity_serch"></activity>
         <activity
             android:name=".UploadActivity"
-            android:label="@string/title_activity_upload" >
-        </activity>
+            android:label="@string/title_activity_upload"></activity>
         <activity
             android:name=".addActivity"
-            android:label="@string/title_activity_add" >
-        </activity>
+            android:label="@string/title_activity_add"></activity>
         <activity
             android:name=".MainActivity2"
-            android:label="@string/title_activity_main_activity2" >
-        </activity>
+            android:label="@string/title_activity_main_activity2"></activity>
         <activity
             android:name=".Serch_Magnetism"
-            android:label="@string/title_activity_serch__magnetism" >
-        </activity>
+            android:label="@string/title_activity_serch__magnetism"></activity>
+        <activity
+            android:name=".ItemlistActivity"
+            android:label="@string/title_activity_upload"></activity>
     </application>
 
 </manifest>
